--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -28,7 +28,9 @@ figures:
 
     <p>During the project I worked closely with our designer, Aldo, to express feature ideas as web prototypes. From these we created a <a href="https://ctznapp.com/web">web application</a>, a <a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">stories page</a>, and a <a href="http://getctzn.com">promotional web site</a>. We continually reworked these as new features and ideas came about. In the process, I made a <a href="http://goodinc.github.io/ctzn-ui/build/">pattern library</a> so the team could easily find the latest designs and HTML to copy for new features.</p>
 
+    <!--
     <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, creating HTML emails, designing responsive layouts for the stories pages, writing production-quality HTML, CSS and JavaScript for the promotional web site, the <a href="https://www.ctznapp.com/push/93311448/dare-to-imagine?channel=1">channels</a> and the web application, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with client-side and server-side templates. (We used <a href="http://knockoutjs.com">Knockout</a> and Sinatra.)</p>
+    -->
 
     <h2>Visit the project</h2>
 
@@ -42,7 +44,7 @@ figures:
     <h2>Behind the scenes</h2>
 
     <ul class="action">
-      <li><a href="https://goodinc.github.io/ctzn-ui/">UI library</a></li>
+      <li><a href="https://goodinc.github.io/ctzn-ui/build/">UI library</a></li>
       <li><a href="https://github.com/goodinc/ctzn-ui">GitHub project</a></li>
     </ul>
 
