--- a/kiva.html
+++ b/kiva.html
@@ -3,11 +3,11 @@ layout: default
 title: 10 Days of Lending
 figures:
 - caption: 10 Days of Lending, Kiva and PayPal
-  url: https://www.kiva.org/paypal
+  url: https://web.archive.org/web/20161014113942/https://www.kiva.org/paypal/smallloansbigimpact
 - caption: 10 Days of Lending, Kiva and PayPal
-  url: https://www.kiva.org/paypal
+  url: https://web.archive.org/web/20161014113942/https://www.kiva.org/paypal/smallloansbigimpact
 - caption: 10 Days of Lending, Kiva and PayPal
-  url: https://www.kiva.org/paypal
+  url: https://web.archive.org/web/20161014113942/https://www.kiva.org/paypal/smallloansbigimpact
 ---
 
 {% include ahoy.html %}
@@ -27,15 +27,25 @@ figures:
 
     <p>I also worked closely with Rachel from Kiva to jump through some JavaScript and CSS hoops while getting the production code into Kiva’s content management system.</p>
 
+    <p>The result was featured on the <a href="https://web.archive.org/web/20161006084107/https://www.paypal.com/us/home">PayPal home page</a>.</p>
+
+    <!--
     <p>Additionally, my role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, and fine-tuning the code for better performance.</p>
+    -->
 
     <p>You can <a href="http://www.goodinc.com/project/the_big_impact_of_small_loans">read more about the project</a> at GOOD’s web site.</p>
 
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://www.kiva.org/paypal">10 Days of Lending</a></li>
+      <li><a href="https://web.archive.org/web/20161014113942/https://www.kiva.org/paypal/smallloansbigimpact">10 Days of Lending, <small>on archive.org</small></a></li>
     </ul>
+
+    <!--
+      How the page looked during the 10 days of lending:
+
+      https://web.archive.org/web/20161010230423/https://www.kiva.org/paypal/smallloansbigimpact
+    -->
 
     {% include figures.html %}
 
