--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ projects:
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a web site or application, I can help you in the murky space between <a href="#services" aria-label="Services">design &amp; engineering</a>.</p>
+    <p>If you’re building a web site or application, I can help you bridge the gap between <a href="#services" aria-label="Services">design &amp; engineering</a>.</p>
 
     <p>Here are some <span class="phrase">projects and teams</span> <span class="phrase">I’ve worked with…</span></p>
 
