Update services list on home page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Style & Code for the Web, by Jim Thoburn
+title: Code & Style for the Web, by Jim Thoburn
 class: home
 projects:
 - name: My LA2050 Activation Challenge
@@ -61,13 +61,13 @@ projects:
       </span>
     </a>
 
-    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface engineer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user experience engineer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <h2>I partner with teams to make robust web products that people <span class="phrase">love to use.</span></h2>
+    <h2>I partner with teams &amp; organizations to make web products that people <span class="phrase">love to use.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a web site or application, I can help you bridge the gap between <a href="#services" aria-label="Services">design &amp; engineering</a>.</p>
+    <p>If you’re building a web site or application, I can help you bridge the gap between <a href="#services" aria-label="Services">design &amp; engineering</a>, and see your product through from idea to production.</p>
 
     <p>Here are some <span class="phrase">projects and teams</span> <span class="phrase">I’ve worked with…</span></p>
 
@@ -92,11 +92,11 @@ projects:
 
   <div class="container" id="services">
     <h1>Services</h1>
-
+  
     <ul class="services">
       <li>
-        <h2>Prototypes</h2>
-        <p>Get an <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">interactive sketch</a> for your project. These can be tested with users, to help choose a direction for a new product.</p>
+        <h2><a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">Prototypes</a></h2>
+        <p>Interactive designs and sketches that can be created quickly to validate your ideas and find opportunities for improvement–before engineering work is invested</p>
       </li>
       <!--
       <li>
@@ -106,18 +106,22 @@ projects:
       </li>
       -->
       <li>
-        <h2>User interfaces</h2>
-        <p>From your ideas, sketches or high-fidelity compositions, I’ll make a fast, lightweight and robust <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">user interface</a>—that’s responsive and accessible to anyone in your audience—built with production-ready HTML, CSS and JavaScript.</p>
+        <h2><a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">User interfaces</a></h2>
+        <p>Fast, robust, production-ready code for web browsers–responsive and accessible to anyone in your audience–built with care and industry best practices</p>
       </li>
       <li>
-        <h2>Living style guides</h2>
-        <p>During the development process, I’ll look for and document <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">reusable code</a>. This will help you create additional pages and features for your project in the future.</p>
+        <h2><a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">Pattern libaries</a></h2>
+        <p>Documented, reusable elements of code &amp; style that will help you maintain and improve your product</p>
+      </li>
+      <li>
+        <h2><a href="https://tobbi.co/la2050/" aria-label="example data-driven site">Production</a></h2>
+        <p>If you’re working without a dedicated engineering team, I can help you set up a low-maintenance, static web site or application–that can be that can be served with high availability, performance and security–along with any tools and services you need to run a successful product.</p>
       </li>
     </ul>
 
-    <h2>I can also assist with…</h2>
-    <p>…browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, integration with templates, and responsive HTML emails.</p>
-
+    <!--
+    <p>I can assist with browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, and responsive HTML emails.</p>
+          
     <h2>I’m especially interested in helping companies with a mission, like…</h2>
 
     <ul>
@@ -127,12 +131,13 @@ projects:
       <li>Creating products for the Web that teach things like science, math and art</li>
       <li>Building tools that help others accomplish those things</li>
     </ul>
+    -->
   </div>
 
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to work on a project or join a team, in the winter & spring of 2019.</p>
+    <p>I’m available to help with projects in the winter & spring of 2019.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
