--- a/good-fest.html
+++ b/good-fest.html
@@ -39,7 +39,7 @@ figures:
     <p>My role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used Ruby on Rails.)</p>
     -->
 
-    <p>You can <a href="http://www.goodinc.com/project/goodfest">read more about the project</a> at GOOD’s web site.</p>
+    <p>You can <a href="http://www.goodinc.com/project/goodfest">read more about the project</a> on GOOD’s web site.</p>
 
     <h2>Visit the project</h2>
 
