Tweak home page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ projects:
       </li>
       <li>
         <h2><a href="https://tobbi.co/la2050/" aria-label="example data-driven site">Production</a></h2>
-        <p>If you’re working without a dedicated engineering team, I can help you set up a low-maintenance, static web site or application–that can be that can be served with high availability, performance and security–along with any tools and services you need to run a successful product.</p>
+        <p>If you’re working without a dedicated engineering team, I can assist you in setting up a low-maintenance, static web site or application–that can be that can be served with high availability, performance and security–along with any tools and services you need to run a successful product.</p>
       </li>
     </ul>
 
@@ -137,7 +137,7 @@ projects:
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to help with projects in the winter & spring of 2019.</p>
+    <p>I’m available to join a project or team in the winter & spring of 2019.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
