Update services on home page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ projects:
       </span>
     </a>
 
-    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user experience engineer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
     <h2>I partner with teams &amp; organizations to make web products that people <span class="phrase">love to use.</span></h2>
 
@@ -95,8 +95,8 @@ projects:
   
     <ul class="services">
       <li>
-        <h2><a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">Prototypes</a></h2>
-        <p>Interactive designs and sketches that can be created quickly to validate your ideas and find opportunities for improvement–before engineering work is invested</p>
+        <h2>Prototypes</h2>
+        <p><a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">Interactive designs and sketches</a> that can be created quickly to validate your ideas and find opportunities for improvement–before engineering work is invested</p>
       </li>
       <!--
       <li>
@@ -106,16 +106,16 @@ projects:
       </li>
       -->
       <li>
-        <h2><a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">User interfaces</a></h2>
-        <p>Fast, robust, production-ready code for web browsers–responsive and accessible to anyone in your audience–built with care and industry best practices</p>
+        <h2>User interfaces</h2>
+        <p>Fast, robust, production-ready <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">code for web browsers</a>–responsive and accessible to anyone in your audience–built with care and industry best practices</p>
       </li>
       <li>
-        <h2><a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">Pattern libaries</a></h2>
-        <p>Documented, reusable elements of code &amp; style that will help you maintain and improve your product</p>
+        <h2>Pattern libaries</h2>
+        <p>Documented, <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">reusable elements of code &amp; style</a> that will help you maintain and improve your product</p>
       </li>
       <li>
-        <h2><a href="https://tobbi.co/la2050/" aria-label="example data-driven site">Production</a></h2>
-        <p>If you’re working without a dedicated engineering team, I can assist you in setting up a low-maintenance, static web site or application–that can be that can be served with high availability, performance and security–along with any tools and services you need to run a successful product.</p>
+        <h2>Production</h2>
+        <p>If you’re working without a dedicated engineering team, I’ll assist you in setting up a low-maintenance, <a href="https://tobbi.co/la2050/" aria-label="example data-driven, static web site">static web site or application</a>–that can be that can be served with high availability, performance and security–along with any tools and services you need to run a successful product.</p>
       </li>
     </ul>
 
