--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ projects:
 
     <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
-    <h2>I partner with teams &amp; organizations to make web products that people <span class="phrase">love to use.</span></h2>
+    <h2>I partner with teams <span class="ampersand">&amp;</span> organizations to make web products that people <span class="phrase">love to use.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
@@ -141,7 +141,7 @@ projects:
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to join a project or team in the winter & spring of 2019.</p>
+    <p>I’m available to join a project or team in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
