--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ projects:
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a web site or application, I can help you bridge the gap between design &amp; engineering, and see your product through from <a href="#services" aria-label="Services">idea to finished product</a>.</p>
+    <p>If you’re building a web site or application, I can help you bridge the gap between <a href="#services" aria-label="Services">design &amp; engineering</a>.</p>
 
     <p>Here are some <span class="phrase">projects and teams</span> <span class="phrase">I’ve worked with…</span></p>
 
