Add color to drop caps on case study pages

--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@ projects:
   image: /images/fahrenheit/2048-wide/poster-a.jpg
 ---
 
-  <script>
-  {% include space-time.js %}
-  </script>
-
   <div class="container introduction">
 
     {% include sky.html %}
@@ -115,7 +111,7 @@ projects:
       </li>
       <li>
         <h2>Pattern libaries</h2>
-        <p>Documented, <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">reusable elements of code &amp; style</a> that will help you maintain and improve your product</p>
+        <p>Documented, reusable <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">elements of code &amp; style</a> that will help you maintain and improve your product</p>
       </li>
       <li>
         <h2>Production</h2>
