Update services list

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ projects:
       </span>
     </a>
 
-    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user interface developer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} design engineer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
     <h2>I partner with teams <span class="ampersand">&amp;</span> organizations to make web products that people <span class="phrase">love to use.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a web site or application, I can help you bridge the gap between <a href="#services" aria-label="Services">design &amp; engineering</a>.</p>
+    <p>If you’re building a web site or application, I can help you see your product through from <a href="#services" aria-label="Services">idea to production</a>.</p>
 
     <p>Here are some <span class="phrase">projects and teams</span> <span class="phrase">I’ve worked with…</span></p>
 
@@ -96,7 +96,7 @@ projects:
     <ul class="services">
       <li>
         <h2>Prototypes</h2>
-        <p><a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">Interactive designs and sketches</a> that can be created quickly to validate your ideas and find opportunities for improvement–before engineering work is invested</p>
+        <p><a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">Interactive designs</a> and sketches that can be created quickly to validate your idea and find opportunities for improvement–before engineering work is invested</p>
       </li>
       <!--
       <li>
@@ -107,15 +107,16 @@ projects:
       -->
       <li>
         <h2>User interfaces</h2>
-        <p>Fast, robust, production-ready <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">code for web browsers</a>–responsive and accessible to anyone in your audience–built with care and industry best practices</p>
+        <p>Fast, robust, production-ready code <span class="ampersand">&amp;</span> style–responsive and accessible to anyone in your audience–built with care and industry best practices</p>
+        <!--<a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design"></a>-->
       </li>
       <li>
         <h2>Pattern libaries</h2>
-        <p>Documented, reusable <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">elements of code &amp; style</a> that will help you maintain and improve your product</p>
+        <p>Documented, <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">reusable elements</a> that will help you maintain and improve your product over time</p>
       </li>
       <li>
         <h2>Production</h2>
-        <p>If you’re working without a dedicated engineering team, I’ll assist you in setting up a low-maintenance, <a href="https://tobbi.co/la2050/" aria-label="example data-driven, static web site">static web site or application</a>–that can be that can be served with high availability, performance and security–along with any tools and services you need to run a successful product.</p>
+        <p>Low-maintenance, static web sites and applications–that can be that can be served with high availability, <a href="https://tobbi.co/la2050/" aria-label="example data-driven, static web site">performance and security</a>–along with any tools and services you need to run a successful product</p>
       </li>
     </ul>
 
