Update services list

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ projects:
       </li>
       <li>
         <h2>Production</h2>
-        <p>Low-maintenance, static web sites and applications–that can be that can be served with high availability, <a href="https://tobbi.co/la2050/" aria-label="example data-driven, static web site">performance and security</a>–along with any tools and services you need to run a successful product</p>
+        <p>Low-maintenance, <a href="https://tobbi.co/la2050/" aria-label="example data-driven, static web site">static web sites</a> and applications–that can be served with high availability, performance and security–along with any tools and services you need to run a successful product</p>
       </li>
     </ul>
 
