Add icons to the home page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ projects:
   company: The Music Center
   url: /grand-park
   image: /images/grand-park/2048-wide/poster-a.jpg
-- name: 10 Days of Lending
-  company: PayPal, Kiva, &amp; GOOD Worldwide
-  url: /kiva
-  image: /images/kiva/2048-wide/poster-c.jpg
+# - name: 10 Days of Lending
+  # company: PayPal, Kiva, &amp; GOOD Worldwide
+  # url: /kiva
+  # image: /images/kiva/2048-wide/poster-c.jpg
 - name: GOOD Worldwide
   company: Type/Code
   url: /good
@@ -28,27 +28,27 @@ projects:
   company: <span class="phrase">Code for America</span>
   url: /food-oasis
   image: /images/food-oasis/2048-wide/poster-a.jpg
-- name: CTZN App
-  company: GOOD Worldwide
-  url: /ctzn-app
-  image: /images/ctzn-app/2048-wide/poster.jpg
-  image_style: "background-position: 50% 25%;"
-- name: GOOD Community
-  url: /good-community
-  image: /images/good-community/2048-wide/poster-b.jpg
-  image_style: "background-position: bottom;"
-- name: OK the Store
-  company: <span class="phrase">Barrel Strength Design</span>
-  url: /ok-the-store
-  image: /images/ok-the-store/2048-wide/poster-a.jpg
-- name: JJ Burns &amp; Company
-  company: <span class="phrase">Fahrenheit Studio</span>
-  url: /jj-burns
-  image: /images/jj-burns/2048-wide/poster-a.jpg
-  image_style: "background-position: 2% 50%;"
-- name: Fahrenheit Studio
-  url: /fahrenheit
-  image: /images/fahrenheit/2048-wide/poster-a.jpg
+# - name: CTZN App
+  # company: GOOD Worldwide
+  # url: /ctzn-app
+  # image: /images/ctzn-app/2048-wide/poster.jpg
+  # image_style: "background-position: 50% 25%;"
+# - name: GOOD Community
+  # url: /good-community
+  # image: /images/good-community/2048-wide/poster-b.jpg
+  # image_style: "background-position: bottom;"
+# - name: OK the Store
+  # company: <span class="phrase">Barrel Strength Design</span>
+  # url: /ok-the-store
+  # image: /images/ok-the-store/2048-wide/poster-a.jpg
+# - name: JJ Burns &amp; Company
+  # company: <span class="phrase">Fahrenheit Studio</span>
+  # url: /jj-burns
+  # image: /images/jj-burns/2048-wide/poster-a.jpg
+  # image_style: "background-position: 2% 50%;"
+# - name: Fahrenheit Studio
+  # url: /fahrenheit
+  # image: /images/fahrenheit/2048-wide/poster-a.jpg
 ---
 
   <div class="container introduction">
@@ -95,8 +95,9 @@ projects:
   
     <ul class="services">
       <li>
+        <img src="/images/icons/nounproject/lastspark/bottle.svg" width="100" height="100" alt="" />
         <h2>Prototypes</h2>
-        <p><a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">Interactive designs</a> and sketches that can be created quickly to validate your idea and find opportunities for improvement–before engineering work is invested</p>
+        <p>Interactive designs and sketches that can be created quickly to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">See an example</a></p>
       </li>
       <!--
       <li>
@@ -106,17 +107,19 @@ projects:
       </li>
       -->
       <li>
+        <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
         <h2>User interfaces</h2>
-        <p>Fast, robust, production-ready code <span class="ampersand">&amp;</span> style–responsive and accessible to anyone in your audience–built with care and industry best practices</p>
-        <!--<a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design"></a>-->
+        <p>Fast, robust, production-ready code <span class="ampersand">&amp;</span> style–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="http://www.goodinc.com/about/philosophy" aria-label="example universal design">See an example</a></p>
       </li>
       <li>
+        <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
         <h2>Pattern libaries</h2>
-        <p>Documented, <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">reusable elements</a> that will help you maintain and improve your product over time</p>
+        <p>Documented, reusable elements that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
       </li>
       <li>
-        <h2>Production</h2>
-        <p>Low-maintenance, <a href="https://tobbi.co/la2050/" aria-label="example data-driven, static web site">static web sites</a> and applications–that can be served with high availability, performance and security–along with any tools and services you need to run a successful product</p>
+        <img src="/images/icons/nounproject/lastspark/ship.svg" width="100" height="100" alt="" />
+        <h2>Production sites</h2>
+        <p>Low-maintenance, static web sites and applications–that can be served with high availability, performance and security–along with any tools and services you need to run a successful product. <a href="https://tobbi.co/la2050/" aria-label="example static web site">See an example</a></p>
       </li>
     </ul>
 
@@ -155,4 +158,11 @@ projects:
       </ul>
 
     </section>
+  </div>
+  
+
+  <div class="container">
+    <p class="credit">
+      <a href="https://thenounproject.com/lastspark/collection/pirates/">Icons by lastspark</a> from the Noun Project
+    </p>
   </div>
