--- a/la2050.html
+++ b/la2050.html
@@ -31,7 +31,7 @@ figures:
 
     <p>Our designer, Megan, and I partnered up to create a <a href="https://activation.la2050.org">web site</a> that explains the contest, showcases the submitted projects, and allows visitors to vote for <span class="phrase">their favorites.</span></p>
 
-    <p>We were expecting potentially thousands of voters at a time, so we built a <a href="https://jekyllrb.com">static web site</a> that can be served with high availability, performance and security. Content management, user submissions &amp; accounts were provided by <a href="#tools">third-party services</a>.</p>
+    <p>We were expecting potentially thousands of voters at a time, so we built a <a href="https://jekyllrb.com">static web site</a> that can be served with high availability, performance and security. Content management, user submissions <span class="ampersand">&amp;</span> accounts were provided by <a href="#tools">third-party services</a>.</p>
 
     <p><a href="http://thewebahead.net/54">Young Hahn</a> and Dave Cole’s work for <a href="https://developmentseed.org/blog/new-healthcare-gov-is-open-and-cms-free/">healthcare.gov</a> was a big inspiration to us.</p>
 
