--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@ projects:
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available to join a project or team in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
+    <p>I’m generally available in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
 
-      <h2>Find me at the social places</h2>
+      <h1>Find me at the social places</h1>
       <ul>
         <li><a href="https://github.com/jimthoburn">GitHub</a></li>
         <li><a href="https://codepen.io/jimthoburn">CodePen</a></li>
