--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ projects:
       </span>
     </a>
 
-    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} design engineer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! I’m Jim, a {% comment %}<!-- sailor on a ship -->{% endcomment %} user experience engineer, <span class="phrase">based in <span class="phrase">Los Angeles.</span></span></h1>
 
     <h2>I partner with teams <span class="ampersand">&amp;</span> organizations to make web products that people <span class="phrase">love to use.</span></h2>
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a web site or application, I can help you see your project through from idea to production.</p>
+    <p>If you’re building a web site or application, I can help you bridge the gap between design &amp; engineering–and see your project through from idea to production.</p>
   </div>
 
   <div class="container" id="services">
