Update GOOD case study

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@ projects:
       <li>
         <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
         <h2>User interfaces</h2>
-        <p>Fast, robust, production-ready code <span class="ampersand">&amp;</span> style–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="http://www.goodinc.com/project/togetherthere_" aria-label="example user interface">See an example</a></p>
+        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="http://www.goodinc.com/project/togetherthere_" aria-label="example user interface">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
         <h2>Pattern libaries</h2>
-        <p>Documented, reusable elements that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
+        <p>Documented, reusable element of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/ship.svg" width="100" height="100" alt="" />
