--- a/good.html
+++ b/good.html
@@ -30,7 +30,7 @@ figures:
 
     <p>GOOD Worldwide publishes a <a href="https://good.is">magazine</a> that celebrates the positive things people are doing around the world. They also help organizations get the word out about the good they’re doing, by creating original media and facilitating brain-storming sessions with their leadership. GOOD needed a marketing web site to tell their story and show their projects.</p>
 
-    <p>During the project I worked alongside Erica, our designer, to create <a href="https://jimthoburn.github.io/goodinc-ui/design/">responsive prototypes</a> that expressed a content structure and visual look for the new web site. In the process, I documented the <a href="https://jimthoburn.github.io/goodinc-ui/build/">code patterns</a> to make it easier to add new pages and features in the future.</p>
+    <p>During the project I worked alongside Erica, our designer, to create <a href="https://jimthoburn.github.io/goodinc-ui/design/">responsive prototypes</a> that expressed a content structure and visual look for the new web site. In the process, I documented <a href="https://jimthoburn.github.io/goodinc-ui/build/">reusable elements</a> of code to make it easier to add new pages and features in the future.</p>
 
     <!--
     <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used Ruby on Rails.)</p>
