Re-arrange home page

--- a/index.html
+++ b/index.html
@@ -67,55 +67,7 @@ projects:
 
     <p class="action"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re building a web site or application, I can help you bridge the gap between design &amp; engineering–and see your project through from idea to production.</p>
-  </div>
-
-  <div class="container" id="services">
-    <h1>Services</h1>
-  
-    <ul class="services">
-      <li>
-        <img src="/images/icons/nounproject/lastspark/bottle.svg" width="100" height="100" alt="" />
-        <h2>Prototypes</h2>
-        <p>Interactive designs and sketches that can be created quickly to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">See an example</a></p>
-      </li>
-      <!--
-      <li>
-        <h2>Iterative development</h2>
-        https://agile.18f.gov
-        <p>https://playbook.cio.gov/#play4</p>
-      </li>
-      -->
-      <li>
-        <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
-        <h2>User interfaces</h2>
-        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="http://www.goodinc.com/project/togetherthere_" aria-label="example user interface">See an example</a></p>
-      </li>
-      <li>
-        <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
-        <h2>Pattern libaries</h2>
-        <p>Documented, reusable element of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
-      </li>
-      <li>
-        <img src="/images/icons/nounproject/lastspark/ship.svg" width="100" height="100" alt="" />
-        <h2>Production sites</h2>
-        <p>Low-maintenance, static web sites and applications–that can be served with high availability, performance and security–along with any tools and services you need to run a successful project. <a href="https://tobbi.co/la2050/" aria-label="case study for a static web site">Read a case study</a></p>
-      </li>
-    </ul>
-
-    <!--
-    <p>I can assist with browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, and responsive HTML emails.</p>
-          
-    <h2>I’m especially interested in helping companies with a mission, like…</h2>
-
-    <ul>
-      <li>Keeping the Web open, accessible, and protecting privacy</li>
-      <li>Making a city a better place to live</li>
-      <li>Improving essential services for people who need them</li>
-      <li>Creating products for the Web that teach things like science, math and art</li>
-      <li>Building tools that help others accomplish those things</li>
-    </ul>
-    -->
+    <p>If you’re building a web site or application, I can help you bridge the gap between design &amp; engineering–and see your project through from <a href="#services">idea to production</a>.</p>
   </div>
 
   <div class="container" id="projects">
@@ -138,10 +90,63 @@ projects:
     </li>
     {% endfor %}
   </ul>
+  
+  
+  
+
+  <div class="container" id="services">
+    <h1>Services</h1>
+  
+    <ul class="services">
+      <li>
+        <img src="/images/icons/nounproject/lastspark/bottle.svg" width="100" height="100" alt="" />
+        <h2>Prototypes</h2>
+        <p>Interactive designs and sketches that can be created quickly, to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">See an example</a></p>
+      </li>
+      <!--
+      <li>
+        <h2>Iterative development</h2>
+        https://agile.18f.gov
+        <p>https://playbook.cio.gov/#play4</p>
+      </li>
+      -->
+      <li>
+        <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
+        <h2>User interfaces</h2>
+        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="http://www.goodinc.com/project/togetherthere_" aria-label="example user interface">See an example</a></p>
+      </li>
+      <li>
+        <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
+        <h2>Pattern libaries</h2>
+        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that can help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
+      </li>
+      <li>
+        <img src="/images/icons/nounproject/lastspark/ship.svg" width="100" height="100" alt="" />
+        <h2>Production sites</h2>
+        <p>Low-maintenance, static web sites and applications–that can be served with high availability, performance and security–along with any tools and services you need to run a successful project. <a href="https://tobbi.co/la2050/" aria-label="case study for a static web site">Read a case study</a></p>
+      </li>
+    </ul>
+
+    <!--
+    <p>I can assist with browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, and responsive HTML emails.</p>
+          
+    <h2>I’m especially interested in helping companies with a mission, like…</h2>
+
+    <ul>
+      <li>Keeping the Web open, accessible, and protecting privacy</li>
+      <li>Making a city a better place to live</li>
+      <li>Improving essential services for people who need them</li>
+      <li>Creating products for the Web that teach things like science, math and art</li>
+      <li>Building tools that help others accomplish those things</li>
+    </ul>
+    -->
+  </div>
+  
+  
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I have availability in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
+    <p>I’m available in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
