Include two more project examples on home page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ projects:
   company: The Music Center
   url: /grand-park
   image: /images/grand-park/2048-wide/poster-a.jpg
-# - name: 10 Days of Lending
-  # company: PayPal, Kiva, &amp; GOOD Worldwide
-  # url: /kiva
-  # image: /images/kiva/2048-wide/poster-c.jpg
+- name: 10 Days of Lending
+  company: PayPal, Kiva, &amp; GOOD Worldwide
+  url: /kiva
+  image: /images/kiva/2048-wide/poster-c.jpg
 - name: GOOD Worldwide
   company: Type/Code
   url: /good
@@ -28,11 +28,11 @@ projects:
   company: <span class="phrase">Code for America</span>
   url: /food-oasis
   image: /images/food-oasis/2048-wide/poster-a.jpg
-# - name: CTZN App
-  # company: GOOD Worldwide
-  # url: /ctzn-app
-  # image: /images/ctzn-app/2048-wide/poster.jpg
-  # image_style: "background-position: 50% 25%;"
+- name: CTZN App
+  company: GOOD Worldwide
+  url: /ctzn-app
+  image: /images/ctzn-app/2048-wide/poster.jpg
+  image_style: "background-position: 50% 25%;"
 # - name: GOOD Community
   # url: /good-community
   # image: /images/good-community/2048-wide/poster-b.jpg
@@ -130,7 +130,13 @@ projects:
     <!--
     <p>I can assist with browser/device compatibility, testing and improving accessibility, optimizing front end code for performance, and responsive HTML emails.</p>
           
-    <h2>I’m especially interested in helping companies with a mission, like…</h2>
+
+    -->
+  </div>
+  
+  
+  <div class="container" id="projects">
+    <h1>I love helping companies with a mission…</h1>
 
     <ul>
       <li>Keeping the Web open, accessible, and protecting privacy</li>
@@ -139,14 +145,13 @@ projects:
       <li>Creating products for the Web that teach things like science, math and art</li>
       <li>Building tools that help others accomplish those things</li>
     </ul>
-    -->
   </div>
   
   
   <div class="container" id="hello">
 
     <h1>Say hello!</h1>
-    <p>I’m available in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
+    <p>I’m available to help with projects in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
