Updates services section

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@ projects:
       <li>
         <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
         <h2>Pattern libaries</h2>
-        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that can help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
+        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/ship.svg" width="100" height="100" alt="" />
         <h2>Production sites</h2>
-        <p>Low-maintenance, static web sites and applications–that can be served with high availability, performance and security–along with any tools and services you need to run a successful project. <a href="https://tobbi.co/la2050/" aria-label="case study for a static web site">Read a case study</a></p>
+        <p>Low-maintenance, static web sites and applications, served with high availability, performance and security, along with any tools and services you need to run a successful project. <a href="https://tobbi.co/la2050/" aria-label="case study for a static web site">Read a case study</a></p>
       </li>
     </ul>
 
@@ -135,8 +135,8 @@ projects:
   </div>
   
   
-  <div class="container" id="projects">
-    <h1>I love helping companies with a mission…</h1>
+  <div class="container">
+    <h1>I love helping teams with a mission like…</h1>
 
     <ul>
       <li>Keeping the Web open, accessible, and protecting privacy</li>
