--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@ projects:
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
-        <h2>Pattern libaries</h2>
+        <h2>Pattern libraries</h2>
         <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/ship.svg" width="100" height="100" alt="" />
-        <h2>Production sites</h2>
+        <h2>Production</h2>
         <p>Low-maintenance, static web sites and applications, served with high availability, performance and security, along with any tools and services you need to run a successful project. <a href="https://tobbi.co/la2050/" aria-label="case study for a static web site">Read a case study</a></p>
       </li>
     </ul>
@@ -169,9 +169,19 @@ projects:
     </section>
   </div>
   
+  
+  <div class="container" style="text-align: center;">
+    <img src="/images/icons/nounproject/nookfulloption/clam.svg" width="100" height="100" alt="" />
+    <!-- <img src="/images/icons/nounproject/nookfulloption/coral.svg" width="100" height="100" alt="" /> -->
+    <img src="/images/icons/nounproject/nookfulloption/shell.svg" width="100" height="100" alt="" />
+  </div>
 
   <div class="container">
     <p class="credit">
-      <a href="https://thenounproject.com/lastspark/collection/pirates/">Icons by lastspark</a> from the Noun Project
+      Icons by <a href="https://thenounproject.com/lastspark/collection/pirates/">lastspark</a> and 
+      <a href="https://thenounproject.com/nookfulloption/collection/sea-set12/">Nook Fulloption</a> from the Noun Project
     </p>
   </div>
+
+
+
